# egui-cha

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  Makefile  README.md
crates/egui-cha/: Cargo.toml
crates/egui-cha-analyzer/: Cargo.toml
crates/egui-cha-analyzer/examples/: analyze_real_file.rs  analyze_sample.rs  analyzer_gui.rs
crates/egui-cha-analyzer/src/: action_extractor.rs  flow_extractor.rs  graph_generator.rs  lib.rs  state_extractor.rs  tea_extractor.rs  types.rs  ui_extractor.rs
crates/egui-cha-ds/: Cargo.toml  README.md
crates/egui-cha-ds/examples/: storybook.rs  vibrancy_demo.rs
crates/egui-cha-ds/src/: lib.rs  theme.rs  titlebar.rs  vibrancy.rs
crates/egui-cha-ds/src/atoms/: badge.rs  beat_sync.rs  bpm_display.rs  button.rs  button_group.rs  channel_strip.rs  clip_grid.rs  context_menu.rs  crossfader.rs  extras.rs  fader.rs  gradient_editor.rs  icon.rs  input.rs  knob.rs  level_meter.rs  link.rs  list_item.rs  media_browser.rs  mod.rs  output_router.rs  plot.rs  sample_pad.rs  scroll_area.rs  select.rs  spectrum.rs  step_seq.rs  text.rs  toggle.rs  tooltip.rs  transport.rs  validated_input.rs  waveform.rs  xypad.rs
crates/egui-cha-ds/src/atoms/audio/: beat_sync.rs  bpm_display.rs  level_meter.rs  mod.rs  oscilloscope.rs  sample_pad.rs  spectrum.rs  step_seq.rs  transport.rs  waveform.rs
crates/egui-cha-ds/src/atoms/core/: arc_slider.rs  badge.rs  button.rs  button_group.rs  capacity_gauge.rs  checkbox.rs  code.rs  context_menu.rs  fader.rs  icon.rs  input.rs  knob.rs  list_item.rs  mod.rs  slider.rs  sparkline_buffer.rs  status_indicator.rs  text.rs  tooltip.rs  validated_input.rs  xypad.rs
crates/egui-cha-ds/src/atoms/midi/: midi_keyboard.rs  midi_mapper.rs  midi_monitor.rs  mod.rs  piano_roll.rs
crates/egui-cha-ds/src/atoms/mixer/: automation_lane.rs  channel_strip.rs  crossfader.rs  effect_rack.rs  envelope_editor.rs  mod.rs
crates/egui-cha-ds/src/atoms/visual/: clip_grid.rs  color_wheel.rs  gradient_editor.rs  layer_stack.rs  mask_editor.rs  media_browser.rs  mod.rs  output_router.rs  preview.rs  timeline.rs  transform_gizmo.rs
crates/egui-cha-ds/src/layout/: builders.rs  mod.rs  spacer.rs
crates/egui-cha-ds/src/molecules/: card.rs  chat.rs  command_palette.rs  dashboard_layout.rs  dock.rs  error_console.rs  form.rs  heatmap_grid.rs  layout_helpers.rs  log_stream.rs  menu.rs  mod.rs  modal.rs  navbar.rs  node_layout.rs  quick_action_bar.rs  search_bar.rs  snarl.rs  table.rs  tabs.rs  toast.rs  workspace.rs
crates/egui-cha-ds/src/semantics/: button.rs  mod.rs  severity_log.rs
crates/egui-cha-macros/: Cargo.toml
crates/egui-cha-macros/src/: lib.rs
crates/egui-cha/src/: app.rs  bindings.rs  cmd.rs  component.rs  drag_drop.rs  error.rs  lib.rs  router.rs  runtime.rs  scroll_area.rs  shortcuts.rs  sub.rs  testing.rs  view_ctx.rs
crates/egui-cha/src/helpers/: clock.rs  debounce.rs  mod.rs  throttle.rs
examples/counter/: Cargo.toml
examples/counter/src/: main.rs
examples/settings-form/: Cargo.toml
examples/settings-form/src/: main.rs
examples/storybook/: Cargo.toml
examples/storybook/src/: main.rs
examples/vj-mock/: Cargo.toml
examples/vj-mock/src/: main.rs
