[workspace]
resolver = "2"
members = [
    "crates/egui-cha",
    "crates/egui-cha-ds",
    "crates/egui-cha-macros",
    "crates/egui-cha-analyzer",
    "examples/counter",
    "examples/vj-mock",
]

[workspace.package]
version = "0.4.0"
edition = "2021"
license = "MIT OR Apache-2.0"
rust-version = "1.75"
repository = "https://github.com/ynishi/egui-cha"
homepage = "https://github.com/ynishi/egui-cha"
keywords = ["egui", "gui", "elm", "tea", "immediate-mode"]
categories = ["gui", "rendering::graphics-api"]

[workspace.dependencies]
# Internal
egui-cha = { version = "0.4.0", path = "crates/egui-cha", features = ["eframe"] }
egui-cha-ds = { version = "0.4.0", path = "crates/egui-cha-ds" }
egui-cha-macros = { version = "0.4.0", path = "crates/egui-cha-macros" }

# Egui ecosystem
egui = { version = "0.33", features = ["serde"] }
egui_dock = "0.18"
egui_extras = "0.33"
egui_plot = "0.34"
egui-snarl = "0.9"
egui_tiles = "0.14"
eframe = { version = "0.33", default-features = false, features = ["default_fonts", "glow", "persistence"] }

# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time"] }

# Utilities
thiserror = "2"
tracing = "0.1"

# Serialization
serde = { version = "1", features = ["derive"] }
toml = "0.8"
