[package]
name = "egui-cha-analyzer"
version = "0.1.0"
edition = "2021"
description = "Static analyzer for egui UI flow: UI -> Action -> State"
license = "MIT OR Apache-2.0"

[dependencies]
syn = { version = "2.0", features = ["full", "visit", "parsing"] }
quote = "1.0"
proc-macro2 = "1.0"

[dev-dependencies]
egui-cha = { path = "../egui-cha" }
egui-cha-ds = { path = "../egui-cha-ds" }
eframe = "0.31"
egui = "0.31"
tracing-subscriber = "0.3"
