[package]
name = "egui-cha-analyzer"
description = "Static analyzer for egui UI flow: UI -> Action -> State"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "../../README.md"

[dependencies]
syn = { version = "2.0", features = ["full", "visit", "parsing"] }
quote = "1.0"
proc-macro2 = "1.0"

[dev-dependencies]
egui-cha.workspace = true
egui-cha-ds.workspace = true
eframe.workspace = true
egui.workspace = true
tracing-subscriber = "0.3"
