[package]
name = "egui-cha-ds"
description = "Design System for egui-cha (Atoms, Molecules, Theme)"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[features]
default = ["macros", "plot", "extras"]
macros = ["dep:egui-cha-macros"]
plot = ["dep:egui_plot"]
extras = ["dep:egui_extras"]

[dependencies]
egui-cha = { workspace = true, features = ["tokio"] }
egui.workspace = true
egui-cha-macros = { workspace = true, optional = true }
egui_plot = { workspace = true, optional = true }
egui_extras = { workspace = true, optional = true }

[dev-dependencies]
egui-cha = { workspace = true, features = ["eframe"] }
eframe.workspace = true
tracing-subscriber = "0.3"
