[package]
name = "egui-cha-ds"
description = "Design System for egui-cha (Atoms, Molecules, Theme)"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[features]
default = ["macros", "plot", "extras"]
macros = ["dep:egui-cha-macros"]
plot = ["dep:egui_plot"]
extras = ["dep:egui_extras"]
# tiles = ["dep:egui_tiles"]  # TODO: egui 0.31 compat
# dock = ["dep:egui_dock"]    # TODO: egui 0.31 compat

[dependencies]
egui-cha = { workspace = true, features = ["tokio"] }
egui.workspace = true
egui-cha-macros = { workspace = true, optional = true }
egui_plot = { workspace = true, optional = true }
egui_extras = { workspace = true, optional = true }
# egui_tiles = { workspace = true, optional = true }  # TODO: egui 0.31 compat
# egui_dock = { workspace = true, optional = true }   # TODO: egui 0.31 compat

[dev-dependencies]
egui-cha = { workspace = true, features = ["eframe"] }
eframe.workspace = true
tracing-subscriber = "0.3"
