[package]
name = "egui-cha-ds"
description = "Design System for egui-cha (Atoms, Molecules, Theme)"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "README.md"
include = [
    "src/**/*",
    "assets/fonts/Phosphor.ttf",
    "Cargo.toml",
    "README.md",
]

[features]
default = ["macros", "plot", "extras", "studio"]
macros = ["dep:egui-cha-macros"]
plot = ["dep:egui_plot"]
extras = ["dep:egui_extras"]
# tiles = ["dep:egui_tiles"]  # TODO: egui 0.31 compat
dock = ["dep:egui_dock"]
snarl = ["dep:egui-snarl"]
fuzzy = []  # Enable fuzzy matching in CommandPalette

# VJ/DAW component features
audio = []   # Audio visualization (BPM, transport, waveform, etc.)
midi = []    # MIDI components (keyboard, piano roll, mapper)
mixer = []   # Mixer components (channel strip, effects, automation)
visual = []  # Visual editing (layers, masks, color wheel)

# Convenience bundles
vj = ["audio", "visual"]           # VJ-focused components
daw = ["audio", "midi", "mixer"]   # DAW-focused components
studio = ["vj", "daw"]             # All VJ/DAW components

[dependencies]
egui-cha = { workspace = true, features = ["tokio"] }
egui.workspace = true
egui-cha-macros = { workspace = true, optional = true }
egui_plot = { workspace = true, optional = true }
egui_extras = { workspace = true, optional = true }
# egui_tiles = { workspace = true, optional = true }  # TODO: egui 0.31 compat
egui_dock = { workspace = true, optional = true }
egui-snarl = { workspace = true, optional = true }

[dev-dependencies]
egui-cha = { workspace = true, features = ["eframe"] }
eframe.workspace = true
tracing-subscriber = "0.3"
