[package]
name = "egui-cha"
description = "TEA (The Elm Architecture) framework for egui"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
egui.workspace = true
eframe.workspace = true
tokio.workspace = true
thiserror.workspace = true
tracing.workspace = true
