[package]
name = "egui-cha"
description = "TEA (The Elm Architecture) framework for egui"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[features]
default = []
tokio = ["dep:tokio"]
eframe = ["dep:eframe", "tokio"]

[dependencies]
egui.workspace = true
thiserror.workspace = true
tracing.workspace = true

# Optional: eframe integration
eframe = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }
